[package]
name = "recode"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
colored = "2.1.0"
inline_colorization = "0.1.6"
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["json"] }
text_io = "0.1.12"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
winapi = "0.3.9"
winconsole = "0.11.1"

[[bin]]
name = "recode"
path = "main.rs"
